--- a/angular2-demo/src/app/app.component.html
+++ b/angular2-demo/src/app/app.component.html
@@ -1,15 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
-      <!-- each hero goes here -->
-      <span class="badge">
-        {{hero.id}}
-      </span>
-      {{hero.name}}
-    </li>
-  </ul>
-
-  <hero-detail [hero]="selectedHero"></hero-detail>
-</div>
-
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+  <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+</nav>
+<router-outlet></router-outlet>
